--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,6 @@
 
 {
-    "title": "Current Times Around the World",
+    "title": "CURRENT TIMES AROUND THE WORLD",
     "selectCountryLabel": "Select Country:",
     "chooseCountryOption": "Choose a country",
     "showTimeButton": "Show Time",
