--- a/public/locales/pt-BR/translation.json
+++ b/public/locales/pt-BR/translation.json
@@ -1,6 +1,6 @@
 
 {
-    "title": "Horários Atuais ao Redor do Mundo",
+    "title": "HORÁRIOS ATUAIS AO REDOR DO MUNDO",
     "selectCountryLabel": "Selecione o País:",
     "chooseCountryOption": "Escolha um país",
     "showTimeButton": "Mostrar Horário",
